--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">"IT's Life"</string>
     <string name="energie">Energie</string>
     <string name="satiete">Satiété</string>
     <string name="hygiene">Hygiène</string>
